--- a/.github/workflows/main_harrisongpt.yml
+++ b/.github/workflows/main_harrisongpt.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - HarrisonGPT
+name: Build and deploy Python app to Azure Web App - HarrisonGPTChatbot
 
 on:
   push:
@@ -62,6 +62,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'HarrisonGPT'
+          app-name: 'HarrisonGPTChatbot'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5E97E5C85B944243AE459BF15103777B }}
